# python-spring-2024

./: README.md
hw_1/: task_1.py  task_2.py  task_3.py
hw_1/artifacts/: task_1.md  task_2.md  task_3.md
hw_1/resources/: empty  many_lines_file
hw_2/: Dockerfile  __main__.py  executor.py  requirements.txt  tex_generator.py
hw_2/artifacts/: task_1.tex  task_2.tex  task_2_pypi_ref
hw_2/task_1/: executor.py  task_1.py
hw_2/tex_gen/: pyproject.toml  tex_gen.py
hw_3/: __main__.py  matrix.py  matrix_via_mixins.py
hw_3/artifacts/3.1/: matrix+.txt  matrix@.txt  matrix_mul.txt
hw_3/artifacts/3.2/: matrix+.txt  matrix@.txt  matrix_mul.txt
hw_3/artifacts/3.3/: A.txt  AB.txt  B.txt  C.txt  CD.txt  hash.txt
